# TechInterventionPlanner

./: CMakeLists.txt  README.md
doc/: Maintenance_&_Troubleshooting_Guide.md  demo.md  developper_documentation.md  global_design_diagram.mermaid
include/Business/: InterventionPlanner.h  NotificationSystem.h  TechnicianManager.h
include/CLI/: AuthenticationSystem.h  CLI.h
include/Decorator/: AttachmentsDecorator.h  GPSTrackingDecorator.h  InterventionDecorator.h
include/Facade/: InterventionManager.h
include/Factory/: EmergencyFactory.h  InterventionFactory.h  InterventionFactoryRegistry.h  MaintenanceFactory.h
include/Model/: EmergencyIntervention.h  Intervention.h  MaintenanceIntervention.h  Technician.h
include/Observer/: ConsoleObserver.h  InterventionObserver.h  LogObserver.h  TechnicianNotificationObserver.h
include/Proxy/: IInterventionManager.h  InterventionManagerSecure.h
src/: main.cpp
src/Business/: InterventionPlanner.cpp  NotificationSystem.cpp  TechnicianManager.cpp
src/CLI/: AuthenticationSystem.cpp  CLI.cpp
src/Decorator/: AttachmentsDecorator.cpp  GPSTrackingDecorator.cpp  InterventionDecorator.cpp
src/Facade/: InterventionManager.cpp
src/Factory/: EmergencyFactory.cpp  InterventionFactoryRegistry.cpp  MaintenanceFactory.cpp
src/Model/: EmergencyIntervention.cpp  Intervention.cpp  MaintenanceIntervention.cpp  Technician.cpp
src/Observer/: ConsoleObserver.cpp  LogObserver.cpp  TechnicianNotificationObserver.cpp
src/Proxy/: InterventionManagerSecure.cpp
